--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Mercado Livre</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+   <head>
+      <meta charset="utf-8" />
+      <link rel="icon" sizes="36x36" href="../src/assets/Logo_ML.png" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta
+         name="description"
+         content="Web site created using create-react-app"
+      />
+      <title>Mercado Livre</title>
+   </head>
+   <body>
+      <noscript>You need to enable JavaScript to run this app.</noscript>
+      <div id="root"></div>
+   </body>
 </html>
